[package]
name = "parser"
version = "0.1.0"
authors = ["Meqolo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.84", features = [
    "extra-traits",
    "full",
    "fold",
    "visit",
] }
quote = "1.0.14"
